Add Rust inventory/equipment systems and continue Java modernization
Rust:
- Add inventory.rs with slot-based item storage, stacking, and management
- Add equipment.rs with equipment slots, combat bonuses, and requirements
- Include comprehensive test suites for both systems

Java modernization:
- ActionSender.java: Simplify getGenerator() with early returns, use var and String.formatted()
- Player.java: Use instanceof pattern matching, convert switch to expression
- Mob.java: Use instanceof pattern matching, add var keyword
- MessageFilter.java: Use diamond operator for ArrayList initialization